# motoclubsite_prj

./: .gitignore  00-INDEX.md  01-PROJECT-STRUCTURE.md  02-DEPENDENCIES.md  03-SETTINGS.md  10-PAGE-MODELS.md  11-HOME-PAGE.md  20-STREAMFIELD-BLOCKS.md  21-HERO-BLOCKS.md  22-CONTENT-BLOCKS.md  23-MEDIA-BLOCKS.md  24-LAYOUT-BLOCKS.md  31-THEME-VELOCITY.md  33-THEME-ECO.md  35-THEMES-PROPOSAL.md  36-WAGTAIL-ADMIN.md  37-COLOR-SCHEME.md  38-THEME-CLUBS.md  39-THEME-TRICOLORE.md  40-SEO-JSONLD.md  42-SNIPPETS.md  50-DOCKER.md  51-PRODUCTION.md  60-CHECKLIST.md  70-MIGRATION-SCRIPT.md  80-MEMBERSHIP-SYSTEM.md  81-GALLERY-UPLOAD.md  82-EVENT-REGISTRATIONS.md  83-TRANSACTIONAL-MODELS.md  84-PWA-BASE.md  84-PWA-PUSH.md  85-CONTRIBUTION-BASE.md  89-PARTNERS.md  90-MUTUAL-AID.md  91-NOTIFICATIONS.md  92-EVENT-FEDERATION.md  EXAMPLE-ABOUT-PAGE.md  EXAMPLE-VELOCITY-BASE.md  EXAMPLE-VELOCITY-PARTS.md  GITHUB_PAGES_SETUP.md  (+7 more)
clubcms/: .env.example  .gitignore  Dockerfile  Makefile  PRIMO_MANUALE.md  REPORT.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
clubcms/.contracts/: CONTRACT-BLOCKS.md  CONTRACT-MEMBERS.md  CONTRACT-PAGES.md  CONTRACT-SETTINGS.md  CONTRACT-SNIPPETS.md
clubcms/apps/: conftest.py
clubcms/apps/core/: context_processors.py  feeds.py  seo.py  urls.py  views.py  wagtail_hooks.py
clubcms/apps/events/: admin.py  apps.py  forms.py  models.py  payment.py  signals.py  tasks.py  urls.py  utils.py  views.py  wagtail_hooks.py
clubcms/apps/federation/: admin.py  (+7 more)
clubcms/clubcms/: urls.py  wsgi.py
clubcms/templates/: base.html
(+244 files in other folders)
