[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clubcms"
version = "0.1.0"
description = "Motorcycle Club CMS built on Django and Wagtail"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "wagtail>=7.0,<8.0",
    "wagtail-localize>=1.9",
    "psycopg[binary]>=3.0",
    "pillow>=10.0",
    "django-taggit>=5.0",
    "django-modelcluster>=6.0",
    "bleach>=6.0",
]

[project.optional-dependencies]
members = [
    "qrcode>=7.4",
    "python-barcode>=0.15",
    "django-allauth>=0.60",
]
notifications = [
    "django-q2>=1.6",
    "pywebpush>=1.14",
    "croniter>=2.0",
]
federation = [
    "httpx>=0.27",
    "django-ratelimit>=4.1",
]
payments = [
    "stripe>=8.0,<10.0",
]
prod = [
    "gunicorn>=21.0",
    "whitenoise>=6.0",
    "sentry-sdk>=1.0",
    "django-storages[s3]>=1.14",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "factory-boy>=3.3",
    "django-debug-toolbar>=4.0",
    "ruff>=0.1",
]
all = [
    "clubcms[members,notifications,federation,payments,prod]",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "clubcms.settings.dev"
python_files = ["tests.py", "test_*.py"]
